add: change password, bank slug,
