# docs/swagger.json
@@ -136,6 +136,45 @@
                 }
             }
         },
+        "/account/change_password": {
+            "patch": {
+                "security": [
+                    {
+                        "Authenticate Bearer": []
+                    }
+                ],
+                "description": "change password of account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "change password",
+                "parameters": [
+                    {
+                        "description": "password that is for change",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.ChangePasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "always returns status 200 but body contains errors",
+                        "schema": {
+                            "$ref": "#/definitions/accounting.BaseResult"
+                        }
+                    }
+                }
+            }
+        },
         "/account/signin": {
             "post": {
                 "description": "signing in to account that already signed up",
@@ -1025,6 +1064,19 @@
                 }
             }
         },
+        "services.ChangePasswordInput": {
+            "type": "object",
+            "properties": {
+                "new_password": {
+                    "description": "NewPassword",
+                    "type": "string"
+                },
+                "retry_password": {
+                    "description": "RetryPassword",
+                    "type": "string"
+                }
+            }
+        },
         "services.CurrencyType": {
             "type": "string",
             "enum": [
@@ -1085,6 +1137,10 @@
                     "description": "BankNumber",
                     "type": "integer"
                 },
+                "bank_slug": {
+                    "description": "BankSlug",
+                    "type": "string"
+                },
                 "category": {
                     "description": "Category",
                     "type": "string"
@@ -1129,6 +1185,9 @@
                 },
                 "bank_number": {
                     "type": "integer"
+                },
+                "bank_slug": {
+                    "type": "string"
                 },
                 "category": {
                     "type": "string"
